# slop-test

./: .env.example  .gitignore  .htmlhintrc  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  REQUIREMENTS.md  eslint.config.mjs  example_struct.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh
VRESC-prod/: .gitignore  README.md  app.py  install.sh  package.json  requirements.txt  uninstall.sh  vite.config.js
VRESC-prod/content/gadgets/: info.js  numpad.js  panel.js  toggle-bank.js
VRESC-prod/docs/architecture/: 01-network.md  02-modules.md
VRESC-prod/docs/gadgets/: README.md  authoring.md  room-compilation.md
VRESC-prod/docs/roombuilder/: README.md  pipeline.md  stages.md
VRESC-prod/roombuilder/: build.py  stages.yaml
VRESC-prod/roombuilder/builderstubs/: detect_animatables.json  hotspot_content_raw.txt  hotspot_grounding.json  scene_analyze.json
VRESC-prod/roombuilder/examples/: room7.params.json
VRESC-prod/roombuilder/handlers/: deploy_room.py  detect_animatables.py  extract_first_frame.py  hotspot_content.py  image_generate.py  (+6 more)
VRESC-prod/templates/: index.html
app/: cli.py  config.py  main.py
app/models/: schemas.py
app/routers/: generate.py  health.py  hint.py  scene.py  vapi.py
app/services/: api_bridge.py  interfaces.py  mock_hint.py  mock_image.py  mock_puzzle.py  mock_scene.py  roombuilder.py  scenario_builder.py  scene_analyzer.py  vapi_service.py
static/: DESIGN.md  error.html  index.html  processing.html  results.html  viewer.html
static/js/: error.js  hotspots.js  results.js  upload.js  viewer.js
(+38 files in other folders)
